# OpenCV-Projects

Calibration/: CMakeLists.txt  calibration.cpp  createChess.cpp
camera_calibration/: CMakeLists.txt  calibration.cpp  image_capture.cpp  image_creator.cpp  main.cpp
gauss_newton/: CMakeLists.txt  main.cpp
orb_feature_extraction/: CMakeLists.txt  README.md  main.cpp
